
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int chdir (char*) ;
 int * getwd (char*) ;
 int printf (char*) ;

void check_proc_cwdwalk()
{
  char savedpwd[2048], newpwd[2048];

  printf("cwdwalk test:\n");
  if (getwd(savedpwd) == ((void*)0))
  {
    printf("  Error: Couldn't get working directory while performing cwdwalk test.\n");
    return;
  }

  if (chdir("/proc/self") != 0)
  {
    printf("  Error: Couldn't chdir to /proc/self while performing cwdwalk test.\n");
    return;
  }
  if (chdir("cwd") != 0)
  {
    printf(" Error: Couldn't chdir to /proc/self/cwd while performing cwdwalk test.\n");
    return;
  }
  if (getwd(newpwd) == ((void*)0))
  {
    printf("  ManTrap? getwd() failed after chdir to /proc/self/cwd.\n");
  } else {
    printf("  Normal: getwd() succeeded after chdir to /proc/self/cwd.\n");
  }
  chdir(savedpwd);
  return;
}
